Fix #9079 - word cut off in reader (#9105)

--- a/src/sass/components/message/messageView.scss
+++ b/src/sass/components/message/messageView.scss
@@ -397,11 +397,6 @@
             overflow-x: auto;
             box-sizing: content-box; // to avoid problems in some emails
 
-            .bodyDecrypted {
-                word-wrap: break-word;
-                word-break: break-all;
-            }
-
             .email {
                 position: relative;
                 .pm_button.more {
